--- a/src/components/Header/index.module.scss
+++ b/src/components/Header/index.module.scss
@@ -3,56 +3,45 @@
   flex-direction: column;
   width: 100%;
   align-items: center;
-  gap: 0.75em;
+  gap: 0.5em;
   justify-content: center;
   position: relative;
   div {
-    position: relative;
-        border-radius: 999px;
+    border-radius: 999px;
     h1 {
       font-size: 2.2em;
       font-weight: 700;
     }
-     
-        span {
-          position: absolute;
-          right: 0px;
-          top: 0;
-          .First{
-            position: absolute;
-            top: -5px;
-            
-          }
-          .Second{
-            position: absolute;
-            right: -30px ;
-            top: -5px;
-          }
-          .Third{
-          position: absolute;
-            bottom: -30px;
-            right: -20px;
-          }
-        }
+
+    span {
+      position: relative;
+
+      svg {
+        position: absolute;
+        right: -28px;
+        top: -18px;
+        width: 35px;
+      }
+    }
   }
-  p{
-    width: calc(6/12 * 100%);
+  p {
+    width: calc(6 / 12 * 100%);
+    color: #4d4d4d;
   }
-  
+
   @media screen and (max-width: 920px) {
-    text-align: center;
-    gap: 0px;
-    p{
-    width: calc(11/12 * 100%);
+    p {
+      width: calc(11 / 12 * 100%);
     }
-    div{
-    h1{
-      font-size: 1.5em;
+    div {
+      h1 {
+        font-size: 1.7em;
+      }
+      span {
+        svg {
+          display: none;
+        }
+      }
     }
-                span {
-                  right: 5px;
-                  top: -5px;
-                }
-  }
   }
 }
