--- a/src/index.css
+++ b/src/index.css
@@ -5,30 +5,35 @@
   font-weight: 300;
   font-style: normal;
 }
+
 @font-face {
   font-family: "Scandia";
   src: url("./assets/fonts/Scandia-Regular.ttf") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
+
 @font-face {
   font-family: "Scandia";
   src: url("./assets/fonts/Scandia-Medium.ttf") format("truetype");
   font-weight: 500;
   font-style: normal;
 }
+
 @font-face {
   font-family: "Scandia";
   src: url("./assets/fonts/Scandia-Bold.ttf") format("truetype");
   font-weight: 700;
   font-style: normal;
 }
+
 @font-face {
   font-family: "Consolas";
   src: url("./assets/fonts/CONSOLA.TTF") format("truetype");
   font-weight: 400;
   font-style: normal;
 }
+
 :root {
   --primary-color: #9d50f6;
 }
@@ -38,7 +43,8 @@
 *::after {
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 
 body {
@@ -47,4 +53,5 @@ body {
 
 html {
   scroll-behavior: smooth;
-}/*# sourceMappingURL=index.css.map */
+}
+/*# sourceMappingURL=index.css.map */
