--- a/src/components/Card/index.module.css
+++ b/src/components/Card/index.module.css
@@ -1,17 +1,16 @@
 .card {
-  width: 90%;
-  margin: auto;
-  -webkit-box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
-          box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2);
+  -webkit-box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
+          box-shadow: 0px 0px 3px rgba(0, 0, 0, 0.2);
   border-radius: 8px;
   -webkit-transition-property: -webkit-box-shadow;
   transition-property: -webkit-box-shadow;
   transition-property: box-shadow;
   transition-property: box-shadow, -webkit-box-shadow;
-  -webkit-transition-duration: 750ms;
-          transition-duration: 750ms;
+  -webkit-transition-duration: 200ms;
+          transition-duration: 200ms;
   -webkit-transition-timing-function: ease-in;
           transition-timing-function: ease-in;
+  max-width: 350px;
 }
 
 .card:hover {
@@ -23,7 +22,7 @@
   width: 100%;
   height: 150px;
   border-radius: 8px 8px 0 0;
-  background-image: linear-gradient(100.55deg, #7450F6 13.34%, #CF50F6 97.24%);
+  background-image: linear-gradient(100.55deg, #7450f6 13.34%, #cf50f6 97.24%);
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -34,6 +33,7 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  z-index: 1;
 }
 
 .card .header p {
@@ -49,7 +49,8 @@
   font-size: 7em;
   font-weight: 900;
   color: transparent;
-  -webkit-text-stroke: 0.25px white;
+  -webkit-text-stroke: 0.25px #ac94f9;
+  z-index: -1;
 }
 
 .card .body {
@@ -60,25 +61,29 @@
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
-  gap: 0.25em;
   padding: 1.5em;
 }
 
 .card .body h1 {
-  font-size: 1.25em;
+  font-size: 1.2em;
   font-weight: 700;
+  line-height: 1em;
 }
 
 .card .body p {
-  font-size: 1.05em;
-  text-overflow: ellipsis;
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
   overflow: hidden;
-  height: 3em;
-  color: #4D4D4D;
+  font-size: 0.95em;
+  color: #4d4d4d;
+  margin-top: 15px;
+  margin-bottom: 7px;
 }
 
 .card .body .link {
   color: #737373;
+  font-size: 0.9em;
 }
 
 .card .body .link a {
