--- a/src/components/Header/index.module.css
+++ b/src/components/Header/index.module.css
@@ -15,6 +15,8 @@
       -ms-flex-pack: center;
           justify-content: center;
   position: relative;
+  --horizontal-padding: 50px;
+  padding: 0 var(--horizontal-padding);
 }
 
 .header div {
@@ -43,14 +45,23 @@
 }
 
 @media screen and (max-width: 920px) {
+  .header {
+    gap: 0.2em;
+  }
   .header p {
-    width: calc(11 / 12 * 100%);
+    width: 100%;
   }
   .header div h1 {
-    font-size: 1.7em;
+    font-size: 1.5em;
   }
   .header div span svg {
     display: none;
+  }
+}
+
+@media screen and (max-width: 650px) {
+  .header {
+    --horizontal-padding: 25px;
   }
 }
 /*# sourceMappingURL=index.module.css.map */
